# AdventesUzdevumi

./: README.md  day3_2.py  day3_t.py  day4_1.py  day4_2.py  day5_1.py  day6_1.py  day6_2.py  day7_1.py  day9_1.py  input_day9_t.txt  test.py
hello_usb/: CMakeLists.txt  hello_usb.c
pipic_proj/: CMakeLists.txt  hello_world.c
